--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "fabpot/goutte": "^3.2",
         "nesbot/carbon": "^1.22",
-        "larapack/dd": "^1.1"
+        "larapack/dd": "^1.1",
+        "phpunit/phpunit": "^7.0@dev"
     },
     "autoload": {
         "psr-0": {
